--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ text-transform: uppercase;
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+.topnav a:hover, .dropbtn:hover, .dropbtn:focus {
   background-color: #ddd;
   color: black;
 }
@@ -49,12 +49,73 @@ text-transform: uppercase;
   display: none;
 }
 
+.dropbtn {
+  background-color: #333;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: fixed;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: grid;}
 
 .SectionThree {
   background-color: #f7f7f7;
   margin-bottom 10px;
 }
 
+.singleviewtitle{
+    width:50%;
+    margin-left: 25%;
+    text-align: center;
+}
+
+.column {
+  float: left;
+  width: 19%;
+  padding: 10px;
+  margin: 1px;
+  height: 300px; /* Should be removed. Only for demonstration */
+  border: 1px solid;
+  border-color: rgba(93,93,93,0.1);
+}
+.column:hover {
+    background: rgba(93,93,93,0.1);
+}
+
+.singleviewtitle h3 {
+  color: #fff;
+}
+
+.singlesviewss {
+ width: 30%;
+ text-align: center;
+}
 
 #proxy {
 padding-bottom: 10px;
@@ -111,9 +172,19 @@ padding-bottom: 0px;
 .tablink{
 	width: 25%;
 }
+.imageContainer > a > img{
+    margin-top:35px;
+}
 .imageContainer > a > img:hover{
-	width:100px;
-	height:160px;
+	width:140px;
+	height:auto;
+    padding: 3px;
+    border: 1px solid;
+    border-radius: 10px;
+    border-color:rgba(93,93,93,0.1);
+    background-color:#939393;
+    background-image: linear-gradient(to right, black, grey, black);
+    margin-top:10px;
 }
 .controlButton{
 	min-width: 125px;
@@ -121,9 +192,9 @@ padding-bottom: 0px;
 	margin-top:15px;
 }
 div.cssContainer{
-	margin-left:35px;
-	margin-right:35px;
-	margin-top:20px;
+	margin-left:3%;
+	margin-right:3%;
+	margin-top:2%;
 	margin-bottom:10px;
 	border:2px solid #aaa !important;
 	border-radius:0.25em;
@@ -178,6 +249,34 @@ div.cssContainer{
   display: none;
 }
 
+.context-menu {
+        position: absolute;
+        text-align: center;
+        background: #fff;
+        border: 1px solid #aaa;
+    }
+  
+.context-menu ul {
+    padding: 0px;
+    margin: 0px;
+    min-width: 150px;
+    list-style: none;
+}
+
+.context-menu ul li {
+    padding-bottom: 7px;
+    padding-top: 7px;
+    border: 1px solid black;
+}
+
+.context-menu ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+.context-menu ul li:hover {
+    background: darkgray;
+}
 
 
 
@@ -208,8 +307,10 @@ label{
 	opacity:0.9;
 }
 
-
-
+.row {
+    width: 90%;
+    margin: 0px 0px 0px 5%;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -225,11 +326,9 @@ label{
     float: right;
     display: block;
   }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+      position: relative;
+  }
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
@@ -239,5 +338,8 @@ label{
     float: none;
     display: block;
     text-align: left;
+  }
+  .column {
+    width: 100%;
   }
 }
